Отображение списка films

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TraineeMoveApp</string>
+    <string name="a11y_plant_item_image">Picture of film</string>
 </resources>
