Android 1.2 Создание экрана деталей

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TraineeMoveApp</string>
-    <string name="a11y_plant_item_image">Picture of film</string>
+    <string name="a11y_film_item_image">Picture of film</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
