Рефакторинг по задаче Android 1.3. Начало задачи 2.1 (разметка новых элементов)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">TraineeMoveApp</string>
     <string name="a11y_film_item_image">Picture of film</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="loader_text">This may take a while...</string>
+    <string name="search_text">"search..."</string>
 </resources>
