--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loader_text">This may take a while...</string>
     <string name="search_text">"search..."</string>
+    <string name="title_text">"Популярное сейчас"</string>
 </resources>
